feat: login endpoint and update service configuration